# aoty

./: .gitignore  LICENSE  pyproject.toml
src/aoty/: __init__.py  client.py  config.py  exceptions.py  models.py  utils.py
src/aoty/scrapers/: __init__.py  album.py  artist.py  base.py  news.py
tests/: test_album_scraper.py  test_artist_scraper.py  test_base_scraper.py  test_client.py  test_news_scraper.py  test_utils.py
